feat: добавил хендлеры для авторизации + создание компании + получение списка компаний пользователя
