# openapi.yaml
@@ -9,6 +9,23 @@ paths:
     post:
       summary: Регистрация пользователя
       operationId: register
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+                company_id:
+                  type: integer
+                  nullable: true
+              required:
+                - email
+                - password
       responses:
         '200':
           description: Успешная регистрация
@@ -34,6 +51,20 @@ paths:
     post:
       summary: Вход в систему
       operationId: login
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+              required:
+                - email
+                - password
       responses:
         '200':
           description: Успешный вход
